# sevs

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/dataset/: coco_val_small.yaml  voc07_test.yaml
configs/eval/: eval_default.yaml  eval_real_torchvision_coco.yaml
configs/model/: detector_torchvision.yaml  detector_yolov8n.yaml  meta_error_predictor.yaml
configs/probes/: perturbations_default.yaml  tta_default.yaml
data/: README.md
data/splits/: coco_val_small.json  voc07_test.json
notebooks/: 00_quickstart.ipynb  01_calibration.ipynb  02_consistency_probes.ipynb  03_error_predictor.ipynb
reports/paper/: references.bib  sevs_paper.md
scripts/: download_coco.sh  make_report.sh  prepare_coco_subset.py  run_baseline.sh  run_sevs_full.sh
src/sevs/: cli.py  logging.py
src/sevs/datasets/: coco.py  common.py  registry.py  voc.py
src/sevs/evaluation/: calibration_eval.py  detection_eval.py  error_eval.py  ood_eval.py  report.py
src/sevs/models/: detector.py  meta_error.py  uncertainty.py
src/sevs/probes/: consistency.py  perturbations.py  tta.py
src/sevs/schemas/: eval_schema.yaml
src/sevs/utils/: geometry.py  io.py  metrics.py  seed.py
tests/: test_consistency.py  test_detection_eval.py  test_metrics.py  test_probes.py
