[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sevs"
version = "0.1.0"
description = "Self-Evaluating Vision System: uncertainty + consistency probing + error prediction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
